--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "sequelize": "^6.24.0",
     "sequelize-cli": "^6.5.1",
     "sqlite3": "^5.1.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
